--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "intervention/image": "^2.5",
         "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
-        "spatie/valuestore": "^1.2"
+        "spatie/valuestore": "^1.2",
+        "webreinvent/laravel-nestable": "dev-master"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
